src/test/ui/suggestions/type-ascription-instead-of-variant.stderr
error: expected type, found `""`
  --> $DIR/type-ascription-instead-of-variant.rs:2:25
   |
LL |     let _ = Option:Some("");
   |                   -     ^^ expected type
   |                   |
   |                   help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`

error: aborting due to previous error

